--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,33 @@
-* {
-	background: #262626;
-	color: white;
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+
+body {
+	padding: 0;
+	margin: 0;
+	font-family: "Roboto", sans-serif;
+	background: #f0f0ff;
+}
+
+label {
+	font-size: 1.2rem;
+	margin-bottom: 0.1rem;
+}
+
+input.form-control,
+input.form-control:focus {
+	background: #f0f0ff;
+}
+
+.error {
+	position: absolute;
+	color: red;
+	font-size: 0.6rem;
+}
+
+.container {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	background: #fff;
+	border-radius: 7rem;
 }
