--- a/src/App.css
+++ b/src/App.css
@@ -24,10 +24,11 @@ input.form-control:focus {
 }
 
 .container {
-	position: absolute;
+	/* position: absolute;
 	top: 50%;
 	left: 50%;
-	transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%); */
+	margin: 10rem auto;
 	background: #fff;
 	border-radius: 7rem;
 }
